# forestero-skymap-poc

./: .gitignore  prek.toml  pyproject.toml
data/bronze/: 2025.10.01 List of administrative entites in cocoa.xlsx  2025.10.09 GPS points CIV GHA.xlsx  GH Tree coordinates.xlsx
nb/: 0-sites.ipynb  1-sentinel-0-search.ipynb  1-sentinel-3-plot.ipynb  1-sentinel-4-gh-ashanti.ipynb  1-sentinel-4-ghana.ipynb  1-sentinel-5-gh-all.ipynb  1-sentinel-dl.ipynb  2-ethz-0-load.ipynb  2-ethz-1-eda.ipynb  2-ethz-2-prep.ipynb  2-ethz-3-gh-ashanti.ipynb  2-ethz-4-gh-all.ipynb  2-sentinel-bbox.ipynb  2-sentinel-dev.ipynb  2-sentinel-dl-site.ipynb  2-sentinel-dl_bbox.ipynb  3-sentinel-dev.ipynb  3-sentinel-enrich-site.ipynb  4-sentinel-plot.ipynb  5-ethz-load.ipynb  5-sentinel-dl-all.ipynb  6-ethz-eda-Copy1.ipynb  constants.py  dev-zones.ipynb  dev.ipynb  ethz.ipynb
nb/utils/: constants.py  search_result.py  sentinel_scene.py  site.py  tree.py
