[project]
name = "forestero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.0",
    "pre-commit>=4.5.1",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]
