[project]
name = "forestero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.21",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.0",
    "pre-commit>=4.5.1",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]
